src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* TODO: transform all vars and RGB items to a class in tailwind.config */
:root {
  --background-color-rgb: 251, 251, 251;
  --color-rgb: 24, 24, 24;
  --app-card-border-rgb: 39, 37, 37;
  
  --black-rgb: 13, 13, 13;
  --white-rgb: 255, 255, 255;
  --onyx-rgb: 24, 24, 24;
  --onyx-rgba-30: 24, 24, 24, 30%;
  --dark-grey-rgb: 128, 128, 128;
  --medium-grey-rgba: 128, 128, 128, 50%;
  --light-grey-rgb: 197, 197, 197;
  --faint-white-rgb: 243, 243, 243;

  --card-bg-color-rgb: 246, 246, 246;
  --card-border-color-rgb: 235, 235, 235;
  --card-border: 1px solid rgb(var(--card-border-color-rgb));
  --card-color: var(--onyx-rgb);
  
  /* Navbar */
  --navbar-bg-color-rgba: 255, 255, 255, 25%;
  --navbar-text-color-rgb: var(--onyx-rgb);
  --navbar-selected-color-rgb: var(--black-rgb);

  /* Mobile Navbar */
  --mobile-navbar-bg-color-rgba: 24, 24, 29, 40%;
  --mobile-navbar-text-color-rgb: var(--onyx-rgb);
  --mobile-navbar-border-color-rgba: 39, 38, 44, 30%;


  /* Selected Work */
  --selected-work-bg-color-rgb: var(--card-bg-color-rgb);
  --selected-work-h3-color-rgb: var(--onyx-rgb);


  /* Buttons */
  --button-box-shadow: none;
  --button-bg-color-1: 26, 26, 26;
  --button-bg-color-2: 16, 16, 16;

  /* Lets Work Together section */
  --lets-work-h2-color: rgb(var(--onyx-rgb));
  --lets-work-p-color: rgb(var(--dark-grey-rgb));

  /* Footer */
  --footer-text-color: rgb(var(--onyx-rgb));
  --footer-h4-color: rgb(var(--onyx-rgb));
  --footer-link-color: rgb(var(--onyx-rgb));
}

.dark:root {
  --background-color-rgb: 13, 13, 13;
  --color-rgb: 255, 255, 255;

  /* Navbar */
  --navbar-bg-color-rgba: 24, 24, 24, 30%;
  --navbar-text-color-rgb: var(--light-grey-rgb);

  --card-bg-color-rgb: 21, 21, 21;
  --card-border-color-rgb: 56, 55, 55;
  --card-border: none;
  --card-color: rgba(var(--light-grey-rgb));

  /* Navbar */
  --navbar-selected-color-rgb: var(--white-rgb);

  /* Selected Work */
  --selected-work-bg-color-rgb: var(--onyx-rgb);
  --selected-work-h3-color-rgb: var(--white-rgb);

  /* Lets Work Together section */
  --lets-work-h2-color: rgb(var(--white-rgb));
  --lets-work-p-color: rgba(var(--medium-grey-rgba));
  
  /* Footer */
  --footer-text-color: rgba(var(--medium-grey-rgba));
  --footer-h4-color: rgb(var(--white-rgb));
  --footer-link-color: rgb(var(--light-grey-rgb));
}

body {
  color: rgb(var(--color-rgb));
  background-color: rgb(var(--background-color-rgb));
  background-image: url('/bg/top-bg.svg'), url('/bg/bottom-bg.svg');
  background-repeat: no-repeat, no-repeat;
  background-position: top, bottom;
}

h1 {
  font-size: 2.5rem;
  p {
    font-size: 2.5rem;
  }
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

p {
  font-size: 0.9rem;
}

@media (min-width: 768px) {
  h1 {
    font-size: 3.125rem;
  }

  h2 {
    font-size: 2.5rem;
  }

  h3 {
    font-size: 1.5rem;
  }

  p {
    font-size: 1rem;
  }
}

.card {
  background-color: rgb(var(--card-bg-color-rgb));
  border: var(--card-border);

  h3 {
    color: var(--card-color);
  }
}

.navbar {
  border: 1px solid rgba(255,2525,255, 20%);

  .itemSelected {
    color: rgb(var(--navbar-selected-color-rgb));
  }
}

.selectedWork {
  background: rgb(var(--selected-work-bg-color-rgb));
  border: var(--card-border);

  h3 {
    color: rgb(var(--selected-work-h3-color-rgb));
  }
}

.lets-work {
  h2 {
    color: var(--lets-work-h2-color);
  }

  p {
    color: var(--lets-work-p-color);
  }
}

footer {
  color: var(--footer-text-color);

  h4 {
    color: var(--footer-h4-color)
  }

  a {
    color: var(--footer-link-color)
  }
}


@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

